fix: dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,7 +35,10 @@
     --radius: 0.5rem;
   }
  
-  .dark {
+.dark{
+  background-color: black
+}
+  /* .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
  
@@ -63,14 +66,19 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
-  }
+  } */
 }
- 
+/*  
 @layer base {
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
+
   }
+} */
+
+body{
+  background-color: black;
 }
